--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8"></meta>
-        <title>專題網頁測試</title>
-    </head>
-    <body>
-        <h2>黃稚芸超胖胖胖胖胖</h2>
-        <p>真的胖</p>
-        <a href = "http://google.com">google 網站</a>
-        <video src = "2022-06-12 23-20-08.mkv" controls></video>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/CLUPkcLQm64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <ol type = "I">
-            <li>google</li>
-            <li>facebook</li>
-            <li>ig</li>
-        </ol >
-        <table>
-            <tr>
-                <td>日期</td>
-
-            </tr>
-            <tr>                
-                <td>2/8 </td>
-            </tr>
-        </table>
-    </body>
+  <head>
+    <title>上傳檔案表單</title>
+  </head>
+  <body>
+    <form action="upload.php" method="post" enctype="multipart/form-data">
+      <label for="file">選擇要上傳的檔案：</label>
+      <input type="file" id="file" name="file">
+      <br><br>
+      <input type="submit" value="上傳">
+    </form>
+  </body>
 </html>
